# nyxusd

./: .env.example  .env.production.example  .env.vercel  .eslintrc.json  .gitignore  AI_CONFIG.md  AI_INTEGRATION_COMPLETE.md  API_SETUP.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.validation  ENABLE_REAL_AI.md  ENVIRONMENT_VARIABLES.md  FIX_PRODUCTION_ISSUES.md  HACKATHON_VIDEO_PLAN.md  README.md  README_DEFI.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_SUMMARY.md  SWAP_INTEGRATION.md  TEST_INSTRUCTIONS.md  TEST_VALIDATION_REPORT.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_ENV_SETUP.md  VERCEL_FUNCTIONS_SETUP.md  VERCEL_SECURITY_IMPLEMENTATION.md  VOICE_SETUP.md  conversation-flow-fixed.js  dev-server.js  docker-ai-validation-report.md  docker-ai-validation.js  docker-compose.frontend.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  docker-simple-validation.yml  eslint.config.js  example_usage.py  (+30 more)
api/: .env.example  SUBSCRIPTION_SETUP.md  ai-assistant.ts  cdp.ts  chat.ts  defi_yields.py  index.ts  package.json  pools.ts  subscriptions.ts  swap.ts  system.ts  test-subscriptions.mjs  tsconfig.json  vercel.json  voice-config.ts  voice-health.ts  voice-token-simple.ts  voice-token.ts  voice-tts.ts
api-functions/: package.json  voice-health.ts
backend-old/: .env.example  health.ts  package.json  tsconfig.json
defi_yield_finder/: __init__.py  cache.py  config.py  defi_yield_finder.py  models.py
docs/: AI_INTEGRATION.md  Asset Expressions | TxPipe Docs16.html
frontend/: .env.example  .gitignore  .npmrc  MASCOT.md  (+14 more)
(+440 files in other folders)
